<resources>
    <string name="app_name">TallerMaterialClase</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_agregar">AGREGAR CARRO</string>
    <string name="placa">Ingrese la Placa</string>
    <string name="color">Escoja un color</string>
    <string name="marca">Escoja una marca</string>
    <string name="precio">Ingrese el precio</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="seleccione_c">Seleccione un color</string>
    <string name="color1">Negro</string>
    <string name="color2">Blanco</string>
    <string name="color3">Azul</string>
    <string name="color4">Morado</string>
    <string name="seleccione_m">Seleccione una marca</string>
    <string name="marca1">Nissan</string>
    <string name="marca2">Chevrolet</string>
    <string name="marca3">Ford</string>
    <string name="marca4">Volkswagen</string>
    <string name="error_placa">Por favor ingrese una placa</string>
    <string name="error_placaI1">Esta placa YA EXISTE \nPor favor ingrese una diferente</string>
    <string name="error_placaI2">La placa debe tener EXACTAMENTE 6 caracteres \n3 letras y 3 numeros</string>
    <string name="error_color">Por favor seleccione un color</string>
    <string name="error_marca">Por favor seleccione una marca</string>
    <string name="error_precio">Por favor ingrese un precio</string>
    <string name="error_precioCero">Precio NO VALIDO \nPor favor ingrese un valor diferente</string>
    <string name="guardadoE">"Carro Guardado Exitosamente"</string>

    <string-array name="s_color">
        <item>@string/seleccione_c</item>
        <item>@string/color1</item>
        <item>@string/color2</item>
        <item>@string/color3</item>
        <item>@string/color4</item>
    </string-array>

    <string-array name="s_marca">
        <item>@string/seleccione_m</item>
        <item>@string/marca1</item>
        <item>@string/marca2</item>
        <item>@string/marca3</item>
        <item>@string/marca4</item>
    </string-array>

</resources>
